--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,23 @@
+# APPLICATION
 spring.application.name=Projeto Senior Sistemas
+
+# DATASOURCE
+spring.datasource.url=jdbc:h2:mem:projeto-senior-sistemas
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
+# JPA
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+spring.jpa.properties.hibernate.format_sql=false
+spring.jpa.show-sql=true
+
+# SQL
+spring.sql.init.mode=never
+
+# H2 Console
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+# Server
+server.port=8080
