Ajustado projeto para utilizar banco de dados Postgres

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,15 +2,18 @@
 spring.application.name=Projeto Senior Sistemas
 
 # DATASOURCE
-spring.datasource.url=jdbc:h2:mem:projeto-senior-sistemas
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
+spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5432/projeto-senior-sistemas}
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.username=${DATABASE_USERNAME:postgres}
+spring.datasource.password=${DATABASE_PASSWORD:1234}
 
 # JPA
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
-spring.jpa.properties.hibernate.format_sql=false
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
+spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.defer-datasource-initialization=true
 
 # SQL
 spring.sql.init.mode=never
@@ -20,4 +23,5 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
 # Server
+server.error.include-stacktrace=never
 server.port=8080
